boinc (4.72-3) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * boinc-server:
    - Install python boinc module
    - Install html files to usr/share/boinc/html
  * debian/control.in:
    - Build depend on the newer libmysqlclient15-dev package.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sun, 14 Aug 2005 02:15:35 +0200

boinc (4.72-2) experimental; urgency=low

  [ Frank S. Thomas ]
  * Patched the BOINC Manager so that it compiles with Debian's experimental
    wxWidgets version 2.6.1 (see: 03_wxwidgets_with_unicode.patch).
  * Install "BOINC Manager.mo" files under /usr/share/locale/.
  * Use LSB init-functions for the boinc-client init script and add lsb-base
    dependency to boinc-client.
  * debian/control.in:
    - Added libjpeg62-dev to Build-Depends.
    - boinc-manager properly conflicts with and replaces now the old boinc-gui
      package. The experimental state of this package was a lame excuse for
      not providing a smooth upgrade path in 4.27-1.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 13 Aug 2005 17:50:58 +0200

boinc (4.72-1) experimental; urgency=low

  * The "You are a credit junkie!" release.
  
  [ Frank S. Thomas ]
  * New upstream release.
  * debian/rules:
    - Set default C/C++ compiler flags to "-g -O3 -ffast-math".
  * debian/control.in:
    - Added missing build dependencies for the BOINC graphics API library
      (libsm-dev, libice-dev, libxi-dev, libx11-dev).

  [ Steffen Moeller ]
  * debian/control.in:
    - Revised long description of the boinc-client package.
    - Added "boinc-manager | kboincspy" to boinc-client's Suggests field. 

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 30 Jul 2005 00:56:42 +0200

boinc (4.71-1) experimental; urgency=low

  * New upstream release.
  * Included the 'boinc_cmd' program into the boinc-client package. boinc_cmd
    is a command tool that provides an interactive command-line interface to
    the BOINC core client.