@@ -41,6 +41,13 @@ clean::
 	dh_clean boinc_client.1
 	dh_clean boinc_cmd.1
 	dh_clean boincmgr.1
+	dh_clean api/Makefile.in apps/Makefile.in client/Makefile.in \
+	  clientgui/Makefile.in db/Makefile.in lib/Makefile.in \
+	  m4/Makefile.in py/Makefile.in py/Boinc/Makefile.in \
+	  sched/Makefile.in sched/status sched/stop sea/Makefile.in \
+	  test/Makefile.in tools/Makefile.in zip/Makefile.in \
+	  zip/unzip/Makefile.in zip/zip/Makefile.in Makefile.in \
+	  aclocal.m4 config.h.in configure
 
 binary-install/boinc-manager::
 	install -D debian/tmp/usr/bin/boinc_gui \
